# abi-zitate

./: Cargo.toml  Dioxus.toml  Dockerfile  compose.yaml  quotes.json
assets/: main.css
src/: main.rs
