[package]
name = "zitate"
version = "0.1.0"
authors = ["Tim <fritzentim10@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7", features = ["router", "fullstack"] }
dioxus-core = {version="*", features =[ "serialize"]}
chrono = { version = "*", features = ["serde"] }
serde = { version = "*" }
serde_json = { version = "*" }

[features]
default = ["web", "server"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = ["dioxus/server"]


[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
